@@ -1,3 +1,7 @@
+2015-04-15  Sarah Guermond  <sarah.guermond@gmail.com>
+
+   * doc/dev/scripts-and-sandbox.rst: added requirements for streaming I/O
+
 2015-04-14  Josiah Seaman  <josiah@dnaskittle.com>
 
    * lib/{hashbits.cc}: changed: adding doxygen comments
